css/flask-ui.less
/**
 *
 *	 FlaskPHP
 *	 Standard classes for actions UI
 *	 -------------------------------
 *   2017 (c) Codelab Solutions OÜ <codelab@codelab.ee>
 *   Distributed under the MIT License: https://www.flaskphp.com/LICENSE
 *
 */


/*
 *   Login
 */

.login-wrapper {

	.login-message {
		margin: 1rem 0;
	}

	.login-submit {
		margin-top: 1rem;
	}

}


/*
 *   Forms
 */

.form-subtitle {
	color: #868e96;
}

.ui.fileupload-view {

	.fileupload-view-displayimage {
		text-align: center;
		margin-bottom: 10px;
		border-bottom: 1px #f4f4f4 solid;
		padding-bottom: 10px;
	}

	.fileupload-info {
		display: flex;
		justify-content: space-between;
		align-items: center;
	}

	.fileupload-fileinfo {
		text-align: left;
	}

	.fileupload-clear {
		text-align: right;
	}

}

.ui.fileupload input[type="file"] {
  display: none;
}

.ui.radiochecklist.segment {
	margin-top: 4px;
	padding-top: 8px;
	padding-bottom: 8px;
}
.ui.radiochecklist.segment + .ui.basic.red.pointing.prompt.label {
	margin-top: -8px;
	color: #9f3a38 !important;
	border: 1px solid #e0b4b4 !important;
}


/*
 *   Info table
 */

.info-table {
  width: 100%;
	border-collapse: collapse;

	th, td {
    vertical-align: top;
		text-align: left;
		border-top: 1px rgba(34,36,38,0.1) solid;
	}
	tr:first-child th, tr:first-child td {
		border-top: none;
	}

  th {
    width: 35%;
    padding: 8px 20px 8px 0px;
		font-weight: 700;
  }

  td {
    width: 65%;
    padding: 8px 0px;
	 }

  th.info-table-header {
    padding-top: 24px;
    font-size: 20px;
    font-weight: normal;
    color: #868e96;
  }

  td.info-table-divider {
    height: 2rem;
  }
}


/*
 *   List
 */

.list {

	.list-global-actions {
		text-align: right;
		margin-bottom: 1rem;
	}

	.list-filter {
		margin-top: 1rem;
		margin-bottom: 2rem;

		.list-filter-submit {
			margin-top: 1rem;
			text-align: right;
		}
	}

	.list-table-field-sortable {
		color: #d0d1d2;
	}
	.list-table-field-sorted {
		color: #111111;
	}

	.list-paging {
		display: flex;
		justify-content: space-between;

		.list-paging-pages {
			text-align: left;
			padding-left: 0.5rem;
		}
		.list-paging-foundrows {
			text-align: right;
			padding-right: 0.5rem;
		}
	}

}


/*
 *   Block content header
 */

.ui.secondary.segment {
	.title {
		h4 {
			color: #000000;
		}
	}
}

.flask {

	&.blockcontent.header.wrapper {
		display: flex;
		align-items: center;
		justify-content: space-between;
		margin: -5px 0px;

		.title {
			text-align: left;
			flex: 1 1 auto;
		}
		.headeritems {
			text-align: right;
			flex: 0 0 auto;
		}
	}

}

